force-app/main/default/objects/Supplier_Staging__c.object
<CustomObject>
    <description>This is the Supplier Staging table used by the Supplier Import Tool.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Supplier Staging (Account ID)</relationshipLabel>
        <relationshipName>Supplier_StagingAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_information__c</fullName>
        <label>Additional information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Supplier Stagings</relationshipLabel>
        <relationshipName>Supplier_Stagings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Supplier Staging (Contact ID)</relationshipLabel>
        <relationshipName>Supplier_StagingContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this connection would result in payment. True, if this connection will make the supplier stay within the same tier.</description>
        <label>Free Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Organizer ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_User_ID__c</fullName>
        <description>User ID from Organizer</description>
        <externalId>true</externalId>
        <label>Organizer User ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Supplier_Staging1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Zip_Code__c</fullName>
        <label>Postal/Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>Added per Michelle Matias</description>
        <label>Site</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <label>Tax Id</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <label>Vendor ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Supplier Staging</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Company__c</columns>
        <columns>Account_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Owner_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Organizer_ID__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign__c</field>
            <operation>contains</operation>
            <value>TM-20-02-06-LH El Salvador CHSM + SP CEAM Expansion</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Supplier Staging  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>